--- a/src/ultralytics_track/train.ipynb
+++ b/src/ultralytics_track/train.ipynb
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -938,9 +938,9 @@
      "output_type": "stream",
      "text": [
       "Ultralytics YOLOv8.1.24 🚀 Python-3.8.18 torch-2.2.1 CUDA:0 (NVIDIA GeForce RTX 3050 Ti Laptop GPU, 4096MiB)\n",
-      "Model summary (fused): 168 layers, 11125971 parameters, 0 gradients, 28.4 GFLOPs\n",
-      "                   all        318       1021      0.975      0.882      0.947      0.673\n",
-      "Speed: 0.6ms preprocess, 8.0ms inference, 0.0ms loss, 2.5ms postprocess per image\n",
+      "Model summary (fused): 218 layers, 25840339 parameters, 0 gradients, 78.7 GFLOPs\n",
+      "                   all        318       1021      0.975      0.902      0.955       0.67\n",
+      "Speed: 0.6ms preprocess, 13.5ms inference, 0.0ms loss, 1.4ms postprocess per image\n",
       "Results saved to \u001b[1mruns\\detect\\val\u001b[0m\n",
       "💡 Learn more at https://docs.ultralytics.com/modes/val\n"
      ]
@@ -954,32 +954,32 @@
       "\u001b[34m\u001b[1mval: \u001b[0mScanning C:\\Users\\Deniz Işık\\Desktop\\local_repos\\project-phoenix\\datasets\\balloon2-2\\valid\\labels.cache... 318 images, 0 backgrounds, 0 corrupt: 100%|██████████| 318/318 [00:00<?, ?it/s]\n",
       "\n",
       "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):   0%|          | 0/20 [00:00<?, ?it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):   5%|▌         | 1/20 [00:01<00:23,  1.22s/it]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  10%|█         | 2/20 [00:01<00:12,  1.40it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  15%|█▌        | 3/20 [00:01<00:09,  1.75it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  20%|██        | 4/20 [00:02<00:07,  2.05it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  25%|██▌       | 5/20 [00:02<00:05,  2.60it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  30%|███       | 6/20 [00:02<00:04,  3.18it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  35%|███▌      | 7/20 [00:02<00:03,  3.72it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  40%|████      | 8/20 [00:03<00:02,  4.18it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  45%|████▌     | 9/20 [00:03<00:02,  4.67it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  50%|█████     | 10/20 [00:03<00:01,  5.05it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  55%|█████▌    | 11/20 [00:03<00:01,  5.08it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  60%|██████    | 12/20 [00:03<00:01,  5.19it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  65%|██████▌   | 13/20 [00:03<00:01,  5.24it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  70%|███████   | 14/20 [00:04<00:01,  5.33it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  75%|███████▌  | 15/20 [00:04<00:00,  5.33it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  80%|████████  | 16/20 [00:04<00:00,  5.59it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  85%|████████▌ | 17/20 [00:04<00:00,  5.78it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  90%|█████████ | 18/20 [00:04<00:00,  5.65it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  95%|█████████▌| 19/20 [00:05<00:00,  5.62it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 20/20 [00:05<00:00,  4.14it/s]\n",
-      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 20/20 [00:05<00:00,  3.70it/s]\n"
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):   5%|▌         | 1/20 [00:00<00:16,  1.14it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  10%|█         | 2/20 [00:01<00:10,  1.72it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  15%|█▌        | 3/20 [00:01<00:08,  2.06it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  20%|██        | 4/20 [00:01<00:06,  2.39it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  25%|██▌       | 5/20 [00:02<00:05,  2.68it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  30%|███       | 6/20 [00:02<00:04,  2.93it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  35%|███▌      | 7/20 [00:02<00:04,  3.12it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  40%|████      | 8/20 [00:03<00:03,  3.24it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  45%|████▌     | 9/20 [00:03<00:03,  3.33it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  50%|█████     | 10/20 [00:03<00:02,  3.43it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  55%|█████▌    | 11/20 [00:03<00:02,  3.42it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  60%|██████    | 12/20 [00:04<00:02,  3.42it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  65%|██████▌   | 13/20 [00:04<00:02,  3.41it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  70%|███████   | 14/20 [00:04<00:01,  3.42it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  75%|███████▌  | 15/20 [00:05<00:01,  3.41it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  80%|████████  | 16/20 [00:05<00:01,  3.47it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  85%|████████▌ | 17/20 [00:05<00:00,  3.55it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  90%|█████████ | 18/20 [00:05<00:00,  3.56it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):  95%|█████████▌| 19/20 [00:06<00:00,  3.50it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 20/20 [00:06<00:00,  3.24it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 20/20 [00:06<00:00,  3.04it/s]\n"
      ]
     }
    ],
    "source": [
-    "!yolo task=detect mode=val model=anka_v2.1.pt data=data.yaml"
+    "!yolo task=detect mode=val model=anka_v2.2.pt data=data.yaml"
    ]
   }
  ],
